# music-jepa

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  explore.html  index.html  patch_head_maps.html  pyproject.toml  train.py  train_encoder.py  train_head.py  train_patch_head.py
.streamlit/: config.toml
cmp/: full_classical.html  full_electronic.html  full_jazz.html  full_reggae.html  full_rock.html  sample_classical.html  sample_electronic.html  sample_jazz.html  sample_reggae.html  sample_rock.html
configs/: encoder.yaml  encoder_sample.yaml  head.yaml  head_continuation.yaml  head_continuation_patch.yaml  head_continuation_patch_sample.yaml  head_continuation_sample.yaml  head_infil.yaml  head_infil_patch.yaml  head_infil_patch_sample.yaml  head_infil_sample.yaml  sample.yaml  tiny.yaml  train.yaml
data/: download_previews.py  make_spectrograms.py  sample_data.py
docs/: jepa-architecture.md
eval/: app.py  embed_tracks.py  explain_patch_heads.py  explore.py  generate_examples.py  generate_playlist.py  search_tracks.py  visualize.py
examples-patch/: journey_classical_jazz_funk_disco_house_techno_hw0.html  journey_classical_jazz_funk_disco_house_techno_hw100.html  journey_classical_jazz_funk_disco_house_techno_hw50.html  journey_classical_to_techno_hw0.html  journey_classical_to_techno_hw100.html  journey_classical_to_techno_hw50.html  journey_jazz_to_rock_hw0.html  journey_jazz_to_rock_hw100.html  journey_jazz_to_rock_hw50.html  journey_reggae_to_house_hw0.html  journey_reggae_to_house_hw100.html  journey_reggae_to_house_hw50.html  (+15 more)
(+81 files in other folders)
