[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "music-jepa"
version = "0.1.0"
description = "Music JEPA - Joint Embedding Predictive Architecture for music"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "lightning>=2.2.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "Pillow>=10.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "requests>=2.31.0",
    "tensorboard>=2.14.0",
]

[project.optional-dependencies]
eval = [
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "bokeh>=3.3.0",
]

[project.scripts]
train = "train:main"

[tool.hatch.build.targets.wheel]
packages = ["jepa"]
